# Robocup2019

./: .gitattributes  CMakeLists.txt  README.md  config_toolchain  eventstest.cpp  eventstest.h  main.cpp  mymodule.cpp  mymodule.h  qiproject.xml  source.cpp
cross-toolchain/: .gitattributes  toolchain.xml
cross-toolchain/breakpad/: package.xml
cross-toolchain/gtest/: package.xml
cross-toolchain/libalmath/: package.xml
cross-toolchain/libalmathinternal/: package.xml
cross-toolchain/libnaoqi/: package.xml
cross-toolchain/qi-framework/: package.xml
cross-toolchain/qiprobes/: package.xml
cross-toolchain/yocto-sdk/: environment-setup-core2-32-sbr-linux  relocate_qitoolchain.sh  relocate_sdk.py  site-config-core2-32-sbr-linux  version-core2-32-sbr-linux
naoqi/: config.cmake  toolchain.xml
naoqi/doc/: .buildinfo  contents.html  cpp-classindex.html  cpp-funcindex.html  genindex.html  glossary.html  home_nao.html  home_pepper.html  home_romeo.html  index.html  index_dev_guide.html  naoqi-eventindex.html  naoqi-memoryindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
naoqi/etc/: lsb-release
naoqi/lib/: libFLAC++.so.6  libQt53DAnimation.la  libQt53DAnimation.so.5.9.2  libQt53DCore.la  libQt53DCore.so.5.9.2  libQt53DExtras.la  libQt53DExtras.so.5.9.2  libQt53DInput.la  libQt53DInput.so.5.9.2  libQt53DLogic.la  libQt53DLogic.so.5.9.2  libQt53DQuick.la  libQt53DQuick.so.5.9.2  libQt53DQuickAnimation.la  libQt53DQuickAnimation.so.5.9.2  libQt53DQuickExtras.la  libQt53DQuickExtras.so.5.9.2  libQt53DQuickInput.la  libQt53DQuickInput.so.5.9.2  (+145 more)
(+6413 files in other folders)
